# ds-from-scratch-series

./: README.md  pyproject.toml
scratch/linear_algebra/: vector.py
scratch/validation/: vector.py
